--- a/public/locales/sv/translation.json
+++ b/public/locales/sv/translation.json
@@ -1,13 +1,58 @@
 {
-  "navHome": "HEM",
-  "navAbout": "OM MIG",
-  "navProject": "PROJEKT",
-  "navContact": "KONTAKT",
   "title": "FULLSTACKUTVECKLARE JAVASCRIPT",
+  "nav": {
+    "home": "HEM",
+    "about": "OM MIG",
+    "projects": "PROJEKT",
+    "contact": "KONTAKT"
+  },
   "about": {
     "h2": "vem är jag",
     "title": "HALLÅ DÄR",
+    "expand": "Läs mer",
+    "decrease": "Visa mindre",
     "summary": "Jag är fullstackutvecklare i JavaScript med ett stort intresse för design och UI/UX. Jag bygger gärna i React, men har även koll på Vue och vanilla JavaScript.",
     "showMore": "Som person är jag noggrann, har hög arbetsmoral och tror att olika perspektiv leder till bättre lösningar. När jag inte sitter vid datorn och försöker bli klok på kodningsvärldens logik och mysterier, spenderar jag mycket tid med min sambo och våra två söner. Får jag välja fritt, hänger jag i skogen med gott fika och en svampkorg eller diskuterar världsläget med vänner över en middag. Miljö- och samhällsfrågor engagerar mig, och på senare tid har jag även odlat ett trädgårdsintresse. Mat och dryck, hantverk, litteratur, träning och hälsa är annat jag gärna ägnar mig åt."
+  },
+  "projects": {
+    "title": "PROJEKT",
+    "personal": "EGNA PROJEKT",
+    "collab": "SAMARBETEN"
+  },
+  "kanban": {
+    "title": "Kanban Board",
+    "description": "Kanban-app med modulär design där användaren kan skapa, redigera och flytta uppgifter mellan kolumner, antingen med drag-and-drop eller med pilknappar för bättre tillgänglighet.",
+    "midDescription": "Projektet är byggt i React. Modulär komponentarkitektur gör koden återanvändbar och lätt att underhålla. Interaktiva modaler används för redigering av uppgifter. Data sparas i localStorage för att bevara inställningar mellan besök.",
+    "detailedDescription": "Responsiv design säkerställer en smidig upplevelse på både mobil och desktop, och tillgänglighetslösningar som pilknappar kompletterar drag-and-drop för att alla användare ska kunna hantera uppgifter effektivt."
+  },
+  "tictactoe": {
+    "title": "TicTacToe",
+    "description": "Tic-Tac-Toe för två spelare i React och TypeScript med tre brädstorlekar. Vinnaren räknas ut automatiskt och spelet erbjuder en intuitiv spelupplevelse.",
+    "midDescription": "Projektet demonstrerar modern användning av TypeScript i React, med tydliga typdeklarationer och export av globala typer. Spellogiken, som hanterar turordning och anpassar sig efter tre olika brädstorlekar, har en strukturerad och lättunderhållen kodbas.",
+    "detailedDescription": "UI/UX är utformad för att ge en enkel och överskådlig spelupplevelse för två spelare, med tydlig visuell återkoppling vid varje drag och markering av den vinnande raden när spelet är över."
+  },
+  "dashboard": {
+    "title": "Dashboard",
+    "description": "Personlig dashboard med anpassningsbara moduler och info hämtad från externa API:er. Lägg till länkar, se väder, skriv anteckningar, byt bakgrundsbild m.m.",
+    "midDescription": "Dashboarden innehåller redigerbara rubriker och en realtidsuppdaterad klocka, samt moduler för länkar, anteckningar och väder som kan anpassas av användaren. All information sparas i LocalStorage så att inställningar och anteckningar bevaras mellan besök.",
+    "detailedDescription": "Projektet använder flera API:er, bland annat för väder och bakgrundsbilder, och visar hur olika typer av data kan presenteras på ett användarvänligt sätt."
+  },
+  "memory": {
+    "title": "Memory",
+    "description": "Memory i JavaScript för en spelare med animerade kortvändningar. Spelet är enkelt och intuitivt, vilket gör det lätt att fokusera på minnesutmaningen.",
+    "midDescription": "Projektet är byggt i vanilla JavaScript med tydlig funktionsindelning. Spellogik, poängräkning och UI-uppdateringar hanteras i separata funktioner, och DOM-manipulation används för att dynamiskt generera kort.",
+    "detailedDescription": "CSS-transformationer och animationer skapar en engagerande visuell flip-effekt. Responsiv design gör att spelet fungerar smidigt på alla skärmstorlekar, och interaktiv feedback ges genom modaler och poängräkning efter varje drag."
+  },
+  "mortgageCalculator": {
+    "title": "Bolånekalkylator",
+    "description": "Bolånekalkylator i TypeScript som beräknar månadskostnad utifrån lånebelopp, ränta och återbetalningstid och genererar en amorteringsplan.",
+    "midDescription": "Projektet är utvecklat i TypeScript för att dra nytta av strikt typning och förbättrad kodkvalitet. En egen typ (Loan) används för att beskriva låneobjektet, och applikationen validerar användarens inmatning med tydliga gränsvärden innan beräkningar görs.",
+    "detailedDescription": "Månadskostnaden beräknas med annuitetsformeln, och en amorteringsplan genereras dynamiskt. Tabellens rader visar hur amortering, räntekostnad och återstående skuld förändras månad för månad. Projektet visar tydlig funktionsindelning, strukturerad DOM-manipulation och användning av typning för att bygga en robust och användarvänlig kalkylator."
+  },
+  "mathleteCamp": {
+    "title": "Matte-Matchen",
+    "description": "Mattespel i JavaScript med fotbollstema för barn som tränar addition och subtraktion. Efter en lyckad om gång visas en slumpmässig bild på en spelare från favoritlaget.",
+    "midDescription": "Projektet är byggt i modulär vanilla JavaScript med tydligt uppdelade funktioner för spellogik, poäng och UI-uppdateringar, vilket underlättar underhåll och vidareutveckling. DOM-manipulation används för att dynamiskt generera frågor, uppdatera poäng och visa feedback.",
+    "detailedDescription": "Vid framgångsrika omgångar hämtas slumpmässiga bilder på spelare från användarens favoritlag via TheSportsDB API, vilket skapar ett extra visuellt inslag som kan motivera till fler omgångar."
   }
 }
